# OptiNet-Pytorch

./: .gitignore  pyproject.toml
src/optinet_pytorch/core/: base_layers.py
src/optinet_pytorch/core/utils/: channel_count.py  layer_init.py
