[project]
name = "optinet-pytorch"
version = "0.1.0"
description = ""
authors = [
    {name = "AidinHamedi",email = "aidin.hamediasl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "optinet_pytorch", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
