[project]
name = "optinet-pytorch"
version = "0.1.0"
description = ""
authors = [
    {name = "AidinHamedi",email = "aidin.hamediasl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "optinet_pytorch", from = "src"}]

[tool.poetry.dependencies]
torch = { version = ">=2.0" }
torchvision = { version = "*" }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.11.0"
isort = ">=6.0.0"
opencv-python = ">=4.0.0"
torchinfo = ">=1.5.0"
tqdm = ">=4.0.0"
pillow = ">=11.0.0"
torch = { version = ">=2.0", source = "torch-cuda" }
torchvision = { version = "*", source = "torch-cuda" }
grad-cam = "^1.5.5"
scikit-learn = "^1.7.0"
pandas = "^2.3.0"
pytorch-optimizer = "^3.6.0"
shortuuid = "^1.0.13"
rich = "^14.0.0"
tensorboard = "^2.19.0"
custom-onecyclelr = "^0.1.3"
toml = "^0.10.2"

# [[tool.poetry.source]]
# name = "torch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# priority = "explicit"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
